--- a/angular.json
+++ b/angular.json
@@ -132,5 +132,6 @@
       }
     }
   },
-  "defaultProject": "authapp"
+  "defaultProject": "authapp",
+  //"scripts": [ "node_modules/jquery/dist/jquery.min.js" ]
 }
