--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@types/jquery": "^3.3.29",
+    "angularjs-toast": "^2.0.3",
     "auth0-js": "^9.10.0",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
