--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.13",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -25,6 +25,7 @@
     "auth0-js": "^9.10.0",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ngx-toastr": "^10.0.2",
     "rxjs": "~6.3.3",
     "sweetalert2": "^8.8.5",
     "tslib": "^1.9.0",
